<resources>
    <string name="app_name">NeuRolls</string>
    <string name="app_desc">The ultimate media entertainment checklist.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="notif_settings">Notification Settings</string>

    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="home">Home</string>
    <string name="archive">Archive</string>
    <string name="search">Search</string>
    <string name="menu_item_all">All</string>
    <string name="menu_item_films">Films</string>
    <string name="menu_item_books">Books</string>
    <string name="menu_item_games">Games</string>


    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>

    <string name="search_hint">Search Media</string>
    <string name="search_media">Search NeuRolls &#8230;</string>
    <string name="search_films">Search Films</string>
    <string name="search_books">Search Books</string>
    <string name="search_games">Search Games</string>

    <string name="share_via"> Share via</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Text to display in the list when there are no matching results [CHAR LIMIT=NONE] -->
    <string name="no_matching_results">No matching results :(</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here &#8230;</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a film, a book, or a game!</string>
    <string name="empty_film_view_subtitle_text">Get started by adding a film!</string>
    <string name="empty_book_view_subtitle_text">Get started by adding a book!</string>
    <string name="empty_game_view_subtitle_text">Get started by adding a game!</string>

    <string name="empty_archived_view_subtitle_text">You have no archived media here.</string>

    <!-- Toast message in editor when current media was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_media_successful">Media updated</string>

    <!-- Toast message in editor when current pet has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_media_failed">Media not updated (0 rows affected)</string>

    <!-- Dialog message to ask the user to confirm deleting the current media [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this media?</string>

    <!-- Toast message in editor when current media was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_media_successful">Media deleted</string>

    <!-- Toast message in editor when current media has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_media_failed">Error with deleting media</string>

    <string name="synopsis_test">From his hideout beneath a 19th century Paris opera house, the brooding Phantom (Gerard Butler) schemes to get closer to vocalist Christine Daae (Emmy Rossum). The Phantom, wearing a mask to hide a congenital disfigurement, strong-arms management into giving the budding starlet key roles, but Christine instead falls for arts benefactor Raoul (Patrick Wilson). Terrified at the notion of her absence, the Phantom enacts a plan to keep Christine by his side, while Raoul tries to foil the scheme.</string>
</resources>
