<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/nav_header_vertical_spacing">

        <LinearLayout
            android:id="@+id/view_foreground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="@dimen/list_item_height"
                android:layout_height="@dimen/list_item_height"
                android:background="@color/colorAccent"
                android:src="@drawable/ic_movie_black_24dp"
                android:tint="@android:color/white"
                tools:src="@drawable/ic_movie_black_24dp" />

            <LinearLayout
                android:id="@+id/text_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding_horizontal">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:maxLines="1"
                    android:textColor="@color/name"
                    android:textSize="@dimen/subheading_label"
                    android:textStyle="bold"
                    tools:text="Media Name" />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:maxLines="1"
                    tools:text="Genre goes here" />

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/year"
                    tools:text="1990" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_date_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_user_name"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/layout_item_startDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/navigation_icon_size"
                    android:layout_height="@dimen/navigation_icon_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/menu_item_films"
                    android:src="@drawable/ic_date_range_black_24dp"
                    android:tint="@color/colorPrimaryDark" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Date to watch"
                        android:textAllCaps="true"
                        android:textSize="@dimen/caption_label" />

                    <TextView
                        android:id="@+id/tv_item_startDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="today"
                        android:textSize="@dimen/subheading_label" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:id="@+id/layout_item_endDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/navigation_icon_size"
                    android:layout_height="@dimen/navigation_icon_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_notifications_active_black_24dp"
                    android:tint="@color/colorPrimaryDark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                        android:text="@string/notif_settings"
                        android:textAllCaps="true"
                        android:textSize="@dimen/caption_label" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/layout_item_notif_days_before"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_item_notif_days_before"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" days before due date " />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/layout_item_notif_days_before"
                            android:layout_centerHorizontal="true">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="at " />

                            <TextView
                                android:id="@+id/tv_item_notif_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="12:00 pm" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/more_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="36dp"
                    android:text="Director"
                    android:textSize="@dimen/subheading_label" />

                <TextView
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Guy Ritchi"
                    android:textColor="@color/year"
                    tools:text="Guy Ritchie" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    android:text="Production"
                    android:textSize="@dimen/subheading_label" />

                <TextView
                    android:id="@+id/publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Joel Schumacher Productions, Really Useful Films, Scion Films"
                    android:textColor="@color/year"
                    tools:text="Joel Schumacher Productions, Really Useful Films, Scion Films" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="Description"
                android:textAllCaps="true"
                android:textSize="@dimen/subheading_label" />

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                android:text="@string/synopsis_test"
                android:textColor="@color/year"
                android:textSize="@dimen/subheading_label"
                tools:text="@string/synopsis_test" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>